toolkit/themes/mobile/global/scrollbars.css
@namespace url("http://www.w3.org/1999/xhtml");
@namespace xul url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");


xul|scrollbar[root="true"] {
  position: relative;
  z-index: 2147483647;
}

xul|scrollbar {
  -moz-appearance: none !important;
  background-color: transparent !important;
  background-image: none !important;
  border: 0px solid transparent !important;
  pointer-events: none;
  display: block;
}

xul|scrollbar[orient="vertical"] {
  min-width: 6px;
  max-width: 6px;
}

xul|scrollbar[orient="vertical"] xul|thumb {
  -moz-appearance: none !important;
  max-width: 2px !important;
  min-width: 2px !important;
}

xul|scrollbar[orient="horizontal"] {
  min-height: 6px;
  max-height: 6px;
}

xul|scrollbar[orient="horizontal"] xul|thumb {
  -moz-appearance: none !important;
  max-height: 2px !important;
  min-height: 2px !important;
}

xul|scrollbar:not([active="true"]),
xul|scrollbar[disabled] {
  opacity: 0;
}

xul|scrollbarbutton {
  min-height: 6px !important;
  min-width: 6px !important;
  -moz-appearance: none !important;
  visibility: hidden;
}

xul|scrollbarbutton[sbattr="scrollbar-up-top"] {
  display: none;
}

xul|scrollbar xul|thumb {
  background-color: rgba(119, 119, 119, 0.4) !important;
  border: none;
  border-radius: 4px;
}

xul|scrollbarbutton {
  background-image: none !important;
}

select:not([size]):not([multiple]) > xul|scrollbar,
select[size="1"] > xul|scrollbar,
select:not([size]):not([multiple]) > xul|scrollbar > xul|scrollbarbutton,
select[size="1"] > xul|scrollbar > xul|scrollbarbutton {
  display: block;
  margin-left: 0;
  min-width: 16px;
}

