Bug 1618678 - Make scrollbar style caching work on Android. r=heycam
Differential Revision: https://phabricator.services.mozilla.com/D65915

UltraBlame original commit: a6b513d590d4468e1c7d23ef1e322c7aad431c10

--- a/toolkit/themes/mobile/global/scrollbars.css
+++ b/toolkit/themes/mobile/global/scrollbars.css
@@ -20,6 +20,13 @@ xul|scrollbar {
   display: block;
 }
 
+
+
+xul|resizer,
+xul|scrollcorner {
+  pointer-events: none;
+}
+
 xul|scrollbar[orient="vertical"] {
   min-width: 6px;
   max-width: 6px;
